--- a/app/src/main/res/layout/activity_recruited_service.xml
+++ b/app/src/main/res/layout/activity_recruited_service.xml
@@ -7,7 +7,7 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/coordinator_layout"
+        android:id="@+id/coordinator_layout_recruit"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
