--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -186,8 +186,7 @@
                     android:id="@+id/tv_rating_percentile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/tv_rating"
-                    android:layout_marginStart="12dp"
+                    app:layout_constraintStart_toStartOf="@id/tv_level_percentile"
                     app:layout_constraintTop_toTopOf="@id/iv_rating"
                     app:layout_constraintBottom_toBottomOf="@id/iv_rating"
                     android:textSize="16sp"
