--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -105,14 +105,13 @@
                                     android:id="@+id/tv_user_nickname"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_gravity="end"
-                                    android:layout_marginEnd="10dp"
+                                    android:layout_gravity="center"
                                     android:gravity="center"
                                     android:text="@{viewModel.result.nickname}"
                                     android:textColor="@color/sharehands_black"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
-                                    android:visibility="gone" />
+                                    android:visibility="invisible" />
 
                             </FrameLayout>
 
