--- a/app/src/main/res/layout/activity_daily_calendar.xml
+++ b/app/src/main/res/layout/activity_daily_calendar.xml
@@ -129,6 +129,9 @@
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="-42dp"
                         app:column_count="2"
+                        app:row_count="25"
+                        app:start_time="0"
+                        android:backgroundTint="@color/item_color"
                         app:header_title="@array/daily_timetable_header" />
 
                     <!--                <androidx.recyclerview.widget.RecyclerView-->
