--- a/app/src/main/res/layout/item_service_suggested.xml
+++ b/app/src/main/res/layout/item_service_suggested.xml
@@ -1,221 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout>
+    <data>
 
-    <ImageView
-        android:id="@+id/iv_service_preview_thumbnail"
-        android:layout_width="92dp"
-        android:layout_height="92dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/frame_preview_thumbnail"
-        android:clipToOutline="true"
-        android:scaleType="centerCrop"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="12dp"
-        />
+    </data>
 
-    <ImageView
-        android:id="@+id/iv_service_preview_user"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        app:layout_constraintStart_toEndOf="@id/iv_service_preview_thumbnail"
-        app:layout_constraintTop_toTopOf="@id/iv_service_preview_thumbnail"
-        android:background="@drawable/frame_preview_profile"
-        android:layout_marginStart="20dp"
-        android:scaleType="centerCrop"
-        android:clipToOutline="true"/>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_service_preview_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/iv_service_preview_user"
-        app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
-        app:layout_constraintStart_toEndOf="@id/iv_service_preview_user"
-        android:layout_marginStart="8dp"
-        tools:text="닉네임"
-        android:textSize="12sp"
-        android:textColor="@color/text_color"/>
+        <ImageView
+            android:id="@+id/iv_service_preview_thumbnail"
+            android:layout_width="92dp"
+            android:layout_height="92dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/frame_preview_thumbnail"
+            android:clipToOutline="true"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_preview_cert"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        app:layout_constraintTop_toTopOf="@id/iv_service_preview_user"
-        app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
-        app:layout_constraintStart_toEndOf="@id/tv_service_preview_user"
-        android:layout_marginStart="8dp"
-        android:src="@drawable/ic_cert"
-        android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/iv_service_preview_user"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/frame_preview_profile"
+            android:clipToOutline="true"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toEndOf="@id/iv_service_preview_thumbnail"
+            app:layout_constraintTop_toTopOf="@id/iv_service_preview_thumbnail" />
 
-    <TextView
-        android:id="@+id/tv_preview_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/iv_service_preview_user"
-        app:layout_constraintTop_toBottomOf="@id/iv_service_preview_user"
-        android:layout_marginTop="4dp"
-        tools:text="봉사활동명"
-        android:textColor="@color/text_color"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
+        <TextView
+            android:id="@+id/tv_service_preview_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/text_color"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
+            app:layout_constraintStart_toEndOf="@id/iv_service_preview_user"
+            app:layout_constraintTop_toTopOf="@id/iv_service_preview_user"
+            tools:text="닉네임" />
 
+        <ImageView
+            android:id="@+id/iv_preview_cert"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/ic_cert"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
+            app:layout_constraintStart_toEndOf="@id/tv_service_preview_user"
+            app:layout_constraintTop_toTopOf="@id/iv_service_preview_user" />
 
-    <LinearLayout
-        android:id="@+id/layout_info1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/tv_preview_title"
-        app:layout_constraintStart_toStartOf="@id/tv_preview_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        >
+        <TextView
+            android:id="@+id/tv_preview_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textColor="@color/text_color"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/iv_accept"
+            app:layout_constraintStart_toStartOf="@id/iv_service_preview_user"
+            app:layout_constraintTop_toBottomOf="@id/iv_service_preview_user"
+            tools:text="봉사활동명" />
+
 
         <ImageView
             android:id="@+id/iv_preview_location"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_location"
             android:layout_gravity="start"
+            android:layout_marginTop="8dp"
             android:layout_weight="0.5"
-            />
+            android:src="@drawable/ic_location"
+            app:layout_constraintStart_toStartOf="@id/tv_preview_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_preview_title"
+            app:tint="@color/sharehands_green_medium" />
 
         <TextView
             android:id="@+id/tv_preview_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="동대문구"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLength="12"
+            android:textColor="@color/text_color"
             android:textSize="11sp"
             android:textStyle="bold"
-            android:textColor="@color/text_color"
-            android:gravity="start"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:maxLength="12"
-            android:ellipsize="end"
-            />
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_location"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_location"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location"
+            tools:text="동대문구" />
 
         <ImageView
             android:id="@+id/iv_preview_period"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_schedule"
+            android:layout_marginStart="12dp"
             android:layout_weight="0.5"
-            />
+            android:src="@drawable/ic_schedule"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_location"
+            app:layout_constraintStart_toEndOf="@id/tv_preview_location"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location" />
 
         <TextView
             android:id="@+id/tv_preview_period"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="2023.01.01 ~ 2023. 01.01"
-            android:maxLength="24"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="12dp"
+            android:layout_weight="2"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLines="2"
+            android:textColor="@color/text_color"
             android:textSize="11sp"
             android:textStyle="bold"
-            android:textColor="@color/text_color"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_marginStart="2dp"
-            android:gravity="start"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_info2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/layout_info1"
-        app:layout_constraintStart_toStartOf="@id/tv_preview_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_period"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_period"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_period"
+            tools:text="2023.01.01 ~ 2023. 01.01" />
 
         <ImageView
             android:id="@+id/iv_preview_people"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_people"
             android:layout_gravity="start"
             android:layout_weight="0.15"
-            />
+            android:src="@drawable/ic_people"
+            app:layout_constraintTop_toBottomOf="@id/tv_preview_period"
+            app:layout_constraintStart_toStartOf="@id/iv_preview_location"
+            android:layout_marginTop="6dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"/>
 
         <TextView
             android:id="@+id/tv_preview_people"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="3명"
+            android:layout_gravity="center"
+            android:layout_weight="0.6"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLength="12"
+            android:textColor="@color/text_color"
             android:textSize="11sp"
             android:textStyle="bold"
-            android:textColor="@color/text_color"
-            android:gravity="start"
-            android:layout_weight="0.6"
-            android:layout_gravity="center"
-            android:maxLength="12"
-            android:ellipsize="end"
-            />
+            tools:text="3명"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_people"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_people"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_people"
+            android:layout_marginStart="8dp"/>
 
         <ImageView
             android:id="@+id/iv_preview_day"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_clock"
-            app:tint="@color/sharehands_green_strong"
             android:layout_weight="0.25"
-            />
+            android:src="@drawable/ic_clock"
+            app:tint="@color/sharehands_green_medium"
+            app:layout_constraintStart_toStartOf="@id/iv_preview_period"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_people"/>
 
         <TextView
             android:id="@+id/tv_preview_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="목요일"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_weight="2"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLines="1"
+            android:textColor="@color/text_color"
             android:textSize="11sp"
             android:textStyle="bold"
-            android:textColor="@color/text_color"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_marginStart="2dp"
-            android:gravity="start"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            />
+            tools:text="목요일"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_day"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_day"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_day" />
 
+        <ImageView
+            android:id="@+id/iv_accept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:padding="4dp"
+            android:src="@drawable/ic_service_accept"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+        <View
+            android:id="@+id/view_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:background="@color/sharehands_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_scrap_suggested"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_service_accept"
-        android:padding="4dp"
-        />
-
-    <View
-        android:id="@+id/view_line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:background="@color/sharehands_gray"
-        />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
