--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -240,13 +240,24 @@
                     app:layout_constraintStart_toEndOf="@id/iv_check_list"
                     app:layout_constraintTop_toTopOf="@id/iv_check_list" />
 
+                <TextView
+                    android:id="@+id/tv_add_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="12dp"
+                    android:drawableEnd="@drawable/ic_forward_dir"
+                    android:padding="12dp"
+                    android:text="준비물 추가  "
+                    app:layout_constraintBottom_toBottomOf="@id/tv_check_list"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tv_check_list" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_check_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginEnd="20dp"
                     android:padding="20dp"
                     android:paddingBottom="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
